tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:35:
unexpected undefined
expecting ), comma, or rest of range
            matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
                                      ^